test: add comprehensive test coverage for background jobs and services
- Add tests for all background jobs: CrosspostArticleJob, FetchSocialCommentsJob,
  NativeNewsletterSenderJob, NewsletterConfirmationJob, PublishScheduledArticlesJob,
  CleanOldExportsJob, ExportDataJob
- Add tests for LinkExtractorService
- Expand Crosspost model tests with validation and platform tests
- Add crossposts.yml fixture and tech_tag fixture for test support
- Fix CommentReplyNotificationJobTest to properly reset ActionMailer

--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -16,3 +16,8 @@ javascript:
   created_at: <%= 1.day.ago %>
   updated_at: <%= 1.day.ago %>
 
+tech_tag:
+  name: Tech
+  slug: tech
+  created_at: <%= 1.day.ago %>
+  updated_at: <%= 1.day.ago %>
